mod-auth-openidc (1:2.3.2g-3+gcs5.@distro@) @distro@; urgency=low

  * Upgrade upstream

 -- Globus Toolkit <support@globus.org>  Tue, 03 Oct 2017 16:09:39 -0400