@@ -1,3 +1,9 @@
+mod-auth-openidc (1:2.3.2h-1+gcs5.@distro@) @distro@; urgency=low
+
+  * Add inter-module request-specific OIDCAuthRequestParams
+
+ -- Globus Toolkit <support@globus.org>  Wed, 12 Jun 2018 08:52:02 -0400
+
 mod-auth-openidc (1:2.3.2g-3+gcs5.@distro@) @distro@; urgency=low
 
   * Upgrade upstream
